--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,4 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync . s3://cloud-resume-siddhanthote \
-            --exclude "deploy.sh" \
-            --exclude "*.json" \
-            --delete \ 
-            --exact-timestamps
+          aws s3 sync . s3://cloud-resume-siddhanthote --exclude "deploy.sh" --exclude "*.json" --delete --exact-timestamps
